# Music-Lyriz

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
audio/: __init__.py  buffer.py  capture.py  devices.py  levels.py
lyrics/: __init__.py  cache.py  parser.py  search.py  sync.py
packaging/: make_icon.py  music_lyriz.iss  music_lyriz.spec  music_lyriz_onefile.spec
recognizer/: __init__.py  artwork.py  manager.py  media_controls.py  models.py
recognizer/providers/: __init__.py  base.py  windows_media.py
scripts/: build_windows.ps1
tests/: __init__.py  test_artwork.py  test_audio_capture.py  test_lrc_parser.py  test_lyrics_search.py  test_lyrics_sync.py  test_settings.py  test_ui_smoke.py
ui/: __init__.py  app.py  audio_worker.py  karaoke_widget.py  lyrics_worker.py  main_window.py  settings.py  theme.py
utils/: display_power.py  logging_config.py  paths.py  settings.py
