[project]
name = "music-lyriz"
version = "0.1.0"
description = "Real-time desktop karaoke lyrics viewer for Windows system audio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "soundcard>=0.4.3",
    "numpy>=1.26",
    "requests>=2.32",
    "winsdk>=1.0.0b10; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
music-lyriz = "main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["audio*", "recognizer*", "lyrics*", "ui*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
